--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *::-webkit-scrollbar {
   width: 5px;
   height: 5px;
@@ -14,7 +15,16 @@
 }
 
 :root {
-  --main-color: #4400fd;
+  --primaryColor: #253e5f;
+  --secondaryColor: #bbc3cd;
+  --activeColor: #1890ff;
+}
+
+* {
+  font-family: "Monserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* HTML: <div class="loader"></div> */
